[gd_scene load_steps=13 format=3 uid="uid://c7i03vwwk8xxc"]

[ext_resource type="Script" path="res://Code/scripts/Ball.gd" id="1_tkg3c"]
[ext_resource type="AudioStream" uid="uid://bxyg6it8lvmts" path="res://Assets/Sounds/BallDestroy.mp3" id="4_4wlkm"]
[ext_resource type="Script" path="res://Code/scripts/SoundRandomizer.gd" id="5_mdyxr"]
[ext_resource type="AudioStream" uid="uid://dyj2cabo8xekl" path="res://Assets/Sounds/RollingSound1.wav" id="6_ln7sw"]
[ext_resource type="PackedScene" uid="uid://ccuair27bjkhj" path="res://Scenes/Objects/_Skins/DefaultSkin.tscn" id="7_1tsxk"]
[ext_resource type="Script" path="res://Code/scripts/Light.gd" id="7_n5ra8"]
[ext_resource type="AudioStream" uid="uid://cvl4ws5kfetw" path="res://Assets/Sounds/BallHit1.wav" id="7_o4qjx"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_nsy35"]
friction = 0.5
rough = true

[sub_resource type="SphereShape3D" id="SphereShape3D_k67ky"]
radius = 1.95

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_bgepc"]
transparency = 1
albedo_color = Color(1, 1, 1, 0)

[sub_resource type="SphereMesh" id="SphereMesh_3push"]
radius = 2.0
height = 4.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_epytd"]
height = 20.0
radius = 8.0

[node name="ball" type="RigidBody3D" node_paths=PackedStringArray("light")]
physics_material_override = SubResource("PhysicsMaterial_nsy35")
gravity_scale = 10.0
continuous_cd = true
contact_monitor = true
max_contacts_reported = 5
linear_damp_mode = 1
linear_damp = 1.0
angular_damp_mode = 1
angular_damp = 1.0
script = ExtResource("1_tkg3c")
light = NodePath("Light")
buoyancy = 0.0
gravity_force = 4500.0
max_tilt_x = 90.0
max_tilt_z = 90.0
max_speed = 22.5

[node name="collider" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_k67ky")

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_4wlkm")
volume_db = -30.0
pitch_scale = 0.8
bus = &"Sound"
script = ExtResource("5_mdyxr")
base_name = "DeathSound"
sounds_amount = 2
volume_range = Vector2(-5, 5)
pitch_range = Vector2(0.5, 1.5)

[node name="RollingSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_ln7sw")
volume_db = -80.0
autoplay = true
bus = &"Sound"
script = ExtResource("5_mdyxr")

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_o4qjx")
pitch_scale = 1.13385
max_polyphony = 4
bus = &"Sound"
script = ExtResource("5_mdyxr")
randomizing_enabled = true
base_name = "BallHit"
sounds_amount = 2
pitch_range = Vector2(0.75, 1.25)

[node name="Skin" parent="." instance=ExtResource("7_1tsxk")]

[node name="mesh" type="MeshInstance3D" parent="."]
material_override = SubResource("StandardMaterial3D_bgepc")
mesh = SubResource("SphereMesh_3push")

[node name="Light" type="Area3D" parent="."]
script = ExtResource("7_n5ra8")
is_active = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="Light"]
shape = SubResource("CylinderShape3D_epytd")

[node name="SpotLight3D" type="SpotLight3D" parent="Light"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 7, 0)
light_energy = 150.0
shadow_enabled = true
spot_range = 15.0
spot_attenuation = 1.46409
spot_angle = 40.0
spot_angle_attenuation = 100.0

[node name="OmniLight3D" type="OmniLight3D" parent="Light"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, 0)
light_cull_mask = 4294967291
omni_range = 8.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="body_entered" from="Light" to="Light" method="_on_body_entered"]
[connection signal="body_exited" from="Light" to="Light" method="_on_body_exited"]
